# python-project-83

./: .env  Makefile  README.md  build.sh  database.sql  page_analyzer_dev.py  pyproject.toml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
page_analyzer/: __init__.py  app.py  db.py  prompts.py  requests.py
page_analyzer/routes/: routes.py
page_analyzer/templates/: index.html  url.html  urls.html
